--- a/site.yml
+++ b/site.yml
@@ -2,10 +2,10 @@
 # This playbook deploys a simple standalone Tomcat 7 server.
 
 - hosts: tomcat-servers
-  remote_user: root
+  remote_user: ec2-user
   become: yes
   become_method: sudo
 
   roles:
-          #    - selinux
+    - selinux
     - tomcat
